--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@doruk/fetch-retry",
   "version": "5.0.0",
   "description": "Extend any fetch library with retry functionality",
-  "repository": "https://github.com/jonbern/fetch-retry.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/d0ruk/fetch-retry.git"
+  },
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
@@ -17,7 +20,7 @@
     "retry",
     "Fetch API"
   ],
-  "author": "Jon K. Bernhardsen",
+  "author": "Doruk Kutlu",
   "license": "MIT",
   "dependencies": {
     "lodash.merge": "^4.6.2"
@@ -33,5 +36,12 @@
     "mocha": "^8.0.1",
     "nyc": "^14.1.1",
     "sinon": "^6.3.5"
+  },
+  "bugs": {
+    "url": "https://github.com/d0ruk/fetch-retry/issues"
+  },
+  "homepage": "https://github.com/d0ruk/fetch-retry#readme",
+  "directories": {
+    "test": "test"
   }
 }
