--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,10 +1,10 @@
 env:
   browser: true
   commonjs: true
-  es6: false
+  es6: true
 extends: 'eslint:recommended'
 parserOptions:
-  ecmaVersion: 5
+  ecmaVersion: 8
 rules:
   indent:
     - warn
