--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "lint": "eslint index.js ./test/**/*.js",
     "test": "nyc mocha test/**/**.js && npm run lint",
-    "integration-test": "mocha test/integration/"
+    "integration-test": "mocha test/integration/",
+    "example": "parcel example/index.html"
   },
   "keywords": [
     "fetch",
@@ -35,6 +36,8 @@
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^8.0.1",
     "nyc": "^14.1.1",
+    "parcel-bundler": "^1.12.4",
+    "regenerator-runtime": "^0.13.7",
     "sinon": "^6.3.5"
   },
   "bugs": {
